Force vertical scrollbar to appear to prevent ugly "jumps" of the page
See https://stackoverflow.com/questions/24700184/how-do-i-force-a-vertical-scrollbar-to-appear

--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -1,3 +1,7 @@
+body {
+    overflow-y: scroll;
+}
+
 /* navigation */
 .topnav {
   overflow: hidden;
